--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,24 +1,16 @@
-FROM node:18-alpine AS base
+FROM node:18
 WORKDIR /app
 
 # Install dependencies
 COPY package*.json ./
-RUN npm ci
+RUN npm ci --no-audit --no-fund
 
 # Copy source and build
 COPY . .
 RUN npm run build
 
-# Runtime image
-FROM node:18-alpine AS runtime
-WORKDIR /app
+# Runtime env
 ENV NODE_ENV=production
-
-# Only copy what we need at runtime
-COPY --from=base /app/package*.json ./
-COPY --from=base /app/node_modules ./node_modules
-COPY --from=base /app/dist ./dist
-
 EXPOSE 4000
 CMD ["npm","start"]
 
