--- a/server/package.json
+++ b/server/package.json
@@ -19,14 +19,14 @@
     "morgan": "^1.10.1",
     "nanoid": "^5.0.7",
     "serverless-http": "^3.2.0",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
+    "zod": "^3.23.8",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.11.30"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
