--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,17 +1,18 @@
-FROM node:18
+FROM node:18-alpine
 WORKDIR /app
 
 # Install dependencies
 COPY package*.json ./
-# Use npm install to avoid lockfile-sync failures in CI (serverless-http added)
 RUN npm install --no-audit --no-fund
 
 # Copy source and build
 COPY . .
-RUN npm install -g typescript && npm run build
+RUN npm install -g typescript
+RUN npm run build
 
 # Runtime env
 ENV NODE_ENV=production
+ENV PORT=4000
 EXPOSE 4000
 CMD ["npm","start"]
 
