--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,19 +1,35 @@
 FROM node:18-alpine
+
+# Set working directory
 WORKDIR /app
 
-# Install dependencies
+# Copy package files
 COPY package*.json ./
-RUN npm install --no-audit --no-fund
 
-# Copy source and build
+# Install all dependencies (including dev dependencies for build)
+RUN npm install
+
+# Copy source code
 COPY . .
-RUN npm install -g typescript
+
+# Build the application
 RUN npm run build
 
-# Runtime env
+# Remove dev dependencies to reduce image size
+RUN npm prune --production
+
+# Set environment variables
 ENV NODE_ENV=production
 ENV PORT=4000
+
+# Expose port
 EXPOSE 4000
-CMD ["npm","start"]
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:4000/healthz', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"
+
+# Start the application
+CMD ["npm", "start"]
 
 
