--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "npx tsc -b && vite build",
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
@@ -18,6 +18,9 @@
     "@types/react-dom": "^18.3.0",
     "typescript": "^5.4.5",
     "vite": "^5.3.1"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
 
