--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx tsc -b && vite build",
+    "build": "npx tsc -b && npx vite build",
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
